--- a/onebitcode/nodejs-sql-prisma-orm/09-operações-básicas-prisma/package.json
+++ b/onebitcode/nodejs-sql-prisma-orm/09-operações-básicas-prisma/package.json
@@ -13,6 +13,7 @@
     "prisma": "^6.5.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0"
+    "@prisma/client": "^6.5.0",
+    "express": "^4.21.2"
   }
 }
